# blueprint

./: .gitignore  config.yaml  index.ts  tsconfig.json
rust/: Cargo.toml  updates.txt
rust-bp/: Cargo.toml  rust-toolchain.toml
rust-bp/.cargo/: config.toml
rust-bp/EmojicoinDotFun/bytecode_modules/: hex_codes.mv
rust-bp/src/: main.rs
rust/EmojicoinDotFun/bytecode_modules/: emojicoin_dot_fun.mv
rust/src/: bytecode.mv.move  bytecode.txt  cause-loop.json  main.rs
src/code-gen/: parser.ts
tests/move/: publish-all.sh
tests/move/arguments/: publish.sh
tests/move/arguments/sources/: example.move  multi_signer.move  tx_args_module.move
tests/move/second-package/: Move.toml  publish.sh
tests/move/second-package/sources/: main.move
tests/move/wrapper/: Move.toml  publish.sh
tests/move/wrapper-consumer/: Move.toml  publish.sh
tests/move/wrapper-consumer/sources/: main.move
tests/move/wrapper/sources/: five.move  four.move  one.move  three.move  two.move
