[package]
name = "rust-bp"
version = "0.1.0"
edition = "2021"

[build]
incremental = true

[dependencies]
aptos = { git = "https://github.com/aptos-labs/aptos-core.git", tag = "aptos-cli-v6.1.1", subpath = "crates/aptos" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core.git", tag = "aptos-cli-v6.1.1", subpath = "crates/aptos-types" }
move-binary-format = { git = "https://github.com/aptos-labs/aptos-core.git", tag = "aptos-cli-v6.1.1", subpath = "third_party/move/move-binary-format" }
move-core-types = { git = "https://github.com/aptos-labs/aptos-core.git", tag = "aptos-cli-v6.1.1", subpath = "third_party/move/move-core/types" }
move-bytecode-utils = { git = "https://github.com/aptos-labs/aptos-core.git", tag = "aptos-cli-v6.1.1", subpath = "third_party/tools/move-bytecode-utils" }
move-resource-viewer = { git = "https://github.com/aptos-labs/aptos-core.git", tag = "aptos-cli-v6.1.1", subpath = "third_party/tools/move-resource-viewer" }
anyhow = "1.0"
petgraph = "0.6"
hex = "0.4"
poem = { version = "3.1.3", features = ["anyhow", "compression", "rustls"] }
poem-openapi = { version = "5.1.2", features = ["swagger-ui", "url"] }
poem-openapi-derive = "5.1.1"
tokio = { version = "1.35.1", features = ["full"] }
tokio-io-timeout = "1.2.0"
tokio-retry = "0.3.0"
tokio-scoped = { version = "0.2.0" }
tokio-stream = { version = "0.1.14", features = ["fs"] }
tokio-test = "0.4.1"
tokio-util = { version = "0.7.2", features = ["compat", "codec"] }
url = "2.5.4"

[patch.crates-io]
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", rev = "b9cdbaf36bf2a83438d9f660e5a708c82ed60d8e" }
futures = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-channel = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-executor = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-core = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-util = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-sink = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-io = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-task = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-macro = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
