[package]
name = "rust-bp"
version = "0.1.0"
edition = "2021"

[build]
incremental = true

[dependencies]
aptos = { path = "../../aptos-core/crates/aptos" }
aptos-framework = { path = "../../aptos-core/aptos-move/framework" }
aptos-rest-client = { path = "../../aptos-core/crates/aptos-rest-client" }
aptos-types = { path = "../../aptos-core/types" }
move-binary-format = { path = "../../aptos-core/third_party/move/move-binary-format" }
move-core-types = { path = "../../aptos-core/third_party/move/move-core/types" }
move-model = { path = "../../aptos-core/third_party/move/move-model" }
move-decompiler = { path = "../../aptos-core/third_party/move/tools/move-decompiler" }
move-bytecode-utils = { path = "../../aptos-core/third_party/move/tools/move-bytecode-utils" }
move-resource-viewer = { path = "../../aptos-core/third_party/move/tools/move-resource-viewer" }
codespan = "0.11.1"
codespan-reporting = { version = "0.11.1", features = ["serde", "serialization"] }
anyhow = "1.0"
petgraph = "0.6"
hex = "0.4"
futures = "0.3.29"
futures-channel = "0.3.29"
futures-core = "0.3.29"
futures-util = "0.3.29"
poem = { version = "3.1.3", features = ["anyhow", "compression", "rustls"] }
poem-openapi = { version = "5.1.2", features = ["swagger-ui", "url"] }
poem-openapi-derive = "5.1.1"
serde_json = { version = "1.0.81", features = [
    "preserve_order",
    "arbitrary_precision",
] } # Note: arbitrary_precision is required to parse u256 in JSO
tokio = { version = "1.35.1", features = ["full"] }
tokio-io-timeout = "1.2.0"
tokio-retry = "0.3.0"
tokio-scoped = { version = "0.2.0" }
tokio-stream = { version = "0.1.14", features = ["fs"] }
tokio-test = "0.4.1"
tokio-util = { version = "0.7.2", features = ["compat", "codec"] }
url = "2.5.4"

[patch.crates-io]
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", rev = "b9cdbaf36bf2a83438d9f660e5a708c82ed60d8e" }
futures = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-channel = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-executor = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-core = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-util = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-sink = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-io = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-task = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-macro = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
